<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="in_progress">Раздел в разработке</string>
    <string name="back">Вернуться в Главное меню</string>

    <string name="email">dmitri18@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="send_email">Отправить письмо</string>

    <string name="url_address_curs">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="read_agreemen">Открыть пользовательской соглашение</string>
    <string name="network_error">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>

    <string name="you_searched">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="time_lable">Длительность</string>
    <string name="_5_35">5:35</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country_name">Страна</string>

    <string name="zero_time">0:00</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name">Название</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="empty_playlist_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист \"%s\"?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_in_playlist">в этом плейлисте нет треков</string>

</resources>
